# poly-pdt

./: .gitignore  01-original-project-analysis.md  02-requirements.md  03-system-design.md  04-redis-data-design.md  05-development-plan.md  06-frontend-handoff.md  AGENT.MD  README.md  start.sh  stop.sh
backend/: pyproject.toml
backend/app/: __init__.py  allsportsapi.py  api.py  auth.py  collector.py  config.py  connectivity.py  discriminator.py  ggscore.py  goalserve.py  listener.py  main.py  models.py  pm_accounts.py  polymarket.py  retention.py  runtime.py  soak.py  store.py  timeseries.py  trader.py
backend/tests/: fixtures.py  test_allsportsapi.py  test_api.py  test_api_round2.py  test_auth.py  test_collector.py  test_ggscore.py  test_goalserve.py  test_listener.py  test_polymarket_clients.py  test_runtime.py  test_third_round.py  test_timeseries.py  test_trader.py  test_ws_runtime.py
front/: index.html  package-lock.json  package.json  vite.config.ts
front/src/: main.tsx
front/src/app/: App.tsx
front/src/app/api/: client.test.ts  client.ts  mappers.test.ts  mappers.ts  trading-mappers.test.ts  trading-mappers.ts
front/src/app/components/: Header.tsx  LoginPage.tsx  MatchDetail.tsx  Sidebar.tsx  TradingPanel.tsx  header-status.test.ts  header-status.ts  match-chart.test.ts  match-chart.ts
front/src/app/context/: TradingContext.tsx
front/src/styles/: browser-compat.css  index.css  tailwind.css  theme.css
